Fixed Gap

--- a/src/Components/Education/Education.css
+++ b/src/Components/Education/Education.css
@@ -32,7 +32,7 @@
 .education-list {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 200px;
   perspective: 1000px;
   overflow: hidden;
   display: flex;
