--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -7,7 +7,7 @@
   align-items: center;
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .experience-header-title {
